--- a/src/examples/example.tire.html
+++ b/src/examples/example.tire.html
@@ -17,7 +17,7 @@
 
 <body>
 <div id="map"></div>
-<script type="text/javascript" src="http://code.tirejs.com/dist/all/tire-1.1.1.js"></script>
+<script type="text/javascript" src="http://cdn.jsdelivr.net/tire/1.3.1/tire.js"></script>
 <script type="text/javascript" src="../tire.adapter.js"></script>
 <script type="text/javascript" src="../jhere.js"></script>
 <script type="text/javascript">
