--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 With jHERE, you can easily add <strong>interactive maps</strong> to your website. In only 5KB (2KB Gzipped), you get a powerful map API, highly customizable <strong>markers</strong>, event handling and <strong>info bubbles</strong>. Bonus features are <strong>KML</strong> support and data visualization via <strong>heatmaps</strong>.
             </p>
             <p>
-                jHERE is built on top of the awesome and very solid <a href="http://developer.here.net">HERE Maps API</a>. For advanced users, the native
+                jHERE is built on top of the awesome and very solid <a href="http://developer.here.com">HERE Maps API</a>. For advanced users, the native
                 API is exposed by jHERE, thus offering unlimited possibilities of customization.
             </p>
         </section>
